fix date spacing

--- a/src/v2/components/DateControl/DateControl.scss
+++ b/src/v2/components/DateControl/DateControl.scss
@@ -11,7 +11,7 @@
 
 .dateControl-month,
 .dateControl-day {
-	margin-right: 2rem;
+	margin-right: 1rem;
 }
 
 .dateControl-container label {
